Fix overflow

--- a/css/global.less
+++ b/css/global.less
@@ -240,19 +240,17 @@ ul.repos {
 
   li {
     list-style: none;
-    padding: 10px;
     margin-bottom: 5px;
-    overflow: auto;
 
     @media @tablet {     
       height: 50px;
       line-height: 50px;
       padding: 0 10px;
       overflow: hidden;
-    }
 
-    &:hover {
-      background: #e9e9e9;
+      &:hover {
+        background: #e9e9e9;
+      }
     }
 
     .repo-title {
